lobbycompat soft dep and began spawning enemies

--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@
 !/libs
 
 ## Solution
-!EchorinModelReplacements.sln
+!GiantFuckingRobot.sln
 
 ### TwitchChaosWithoutTwitch Project
 !/GiantFuckingRobot
